# src/unitysvc/_generated/models/secret_create.py
@@ -1,82 +1,0 @@
-from collections.abc import Mapping
-from typing import Any, TypeVar, Optional, BinaryIO, TextIO, TYPE_CHECKING, Generator
-
-from attrs import define as _attrs_define
-from attrs import field as _attrs_field
-
-from ..types import UNSET, Unset
-
-
-
-
-
-
-
-T = TypeVar("T", bound="SecretCreate")
-
-
-
-@_attrs_define
-class SecretCreate:
-    """ Schema for creating a secret.
-
-     """
-
-    name: str
-    """ Secret name (e.g., OPENAI_API_KEY). Must be uppercase with underscores. """
-    value: str
-    """ Secret value (will be encrypted) """
-    additional_properties: dict[str, Any] = _attrs_field(init=False, factory=dict)
-
-
-
-
-
-    def to_dict(self) -> dict[str, Any]:
-        name = self.name
-
-        value = self.value
-
-
-        field_dict: dict[str, Any] = {}
-        field_dict.update(self.additional_properties)
-        field_dict.update({
-            "name": name,
-            "value": value,
-        })
-
-        return field_dict
-
-
-
-    @classmethod
-    def from_dict(cls: type[T], src_dict: Mapping[str, Any]) -> T:
-        d = dict(src_dict)
-        name = d.pop("name")
-
-        value = d.pop("value")
-
-        secret_create = cls(
-            name=name,
-            value=value,
-        )
-
-
-        secret_create.additional_properties = d
-        return secret_create
-
-    @property
-    def additional_keys(self) -> list[str]:
-        return list(self.additional_properties.keys())
-
-    def __getitem__(self, key: str) -> Any:
-        return self.additional_properties[key]
-
-    def __setitem__(self, key: str, value: Any) -> None:
-        self.additional_properties[key] = value
-
-    def __delitem__(self, key: str) -> None:
-        del self.additional_properties[key]
-
-    def __contains__(self, key: str) -> bool:
-        return key in self.additional_properties
